[package]
name = "Codex"
version = "0.3.0"
authors = ["5Sigma <hello@5sigma.io>"]
description = "Documentation generator and manager"
edition = "2021"
repository = "https://github.com/5Sigma/codex"

[package.metadata.wix]
upgrade-guid = "57948A17-0103-4A9A-A8EE-9E6C5E424964"
path-guid = "3481FA9A-D2C5-444C-BCC3-F4B942188577"
license = false
eula = false

[lib]
name = "core"
path = "src/core/lib.rs"

[[bin]]
name = "codex"
path = "src/main.rs"


[dependencies]
#CLI
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
console = "0.15.8"

# CORE
handlebars = "5.1.1"
markdown = { version = "1.0.0-alpha.16", features = [] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tree-sitter-highlight = "0.20.1"
tree-sitter-json = "0.20.1"
tree-sitter-javascript = "0.20.1"
tree-sitter-c = "0.20.6"
tree-sitter-cpp = "0.20.3"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-dockerfile = "0.1.0"
tree-sitter-go = "0.20.0"
tree-sitter-lua = "0.0.19"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-css = "0.20.0"
pathdiff = "0.2.1"
rust-embed = { version = "8.2.0", features = ["compression"]}
tree-sitter-html = "0.19.0"
nanoid = "0.4.0"
tree-sitter-bash = "0.20.3"

# SERVER
tiny_http = "0.12.0"
relative-path = { version = "1.9.2", features=["serde"] } 
walkdir = "2.4.0"
chrono = "0.4.32"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
